[package]
name = "pixelrealms_color"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Types for handling colors in the Pixel Realms game"
homepage = "https://github.com/dylanopen/pixelrealms"
repository = "https://github.com/dylanopen/pixelrealms"
readme = "README.md"

[dependencies]
