[package]
name = "pixelrealms_graphics"
version = "0.1.0"
description = "Pixel Realms graphics library [client]"
edition = "2024"
license = "MIT"
homepage = "https://github.com/dylanopen/pixelrealms"
repository = "https://github.com/dylanopen/pixelrealms"
readme = "README.md"

[dependencies]
minifb = "0.28.0"
pixelrealms_color = { path = "../pixelrealms_color" }

